<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/attendeeName"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attendeeEmail"
        android:layout_width="233dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:text="@string/textview"
        app:layout_constraintBaseline_toBaselineOf="@+id/attendeeName"
        app:layout_constraintStart_toEndOf="@+id/attendeeName" />

    <Button
        android:id="@+id/deleteAttendee"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="6dp"
        android:text="@string/x"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/attendeeEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/attendeeEmail" />
</android.support.constraint.ConstraintLayout>